--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,8 +3,7 @@ name: Publish 🚀
 on:
   workflow_dispatch:
   push:
-    branches:
-    - main
+    branches: [master]
 
 env:
   AZURE_WEBAPP_NAME: time-serivce
