--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,7 +3,8 @@ name: Publish 🚀
 on:
   workflow_dispatch:
   push:
-    branches: [master]
+    branches: 
+      - main
 
 env:
   AZURE_WEBAPP_NAME: time-serivce
